deployments/kafka/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: greencompute-kafka-svc
spec:
  type: ClusterIP
  ports:
  - name: kafka-port
    port: 9092
    targetPort: 9092
  selector:
    app: kafka
