deployments/kafka/kafka-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka-ingress
  labels:
    app: cassandra
spec:
  rules:
  - host: kafka.green.case
    http:
      paths:
        - path: /
          backend:
            serviceName: kafka-service
            servicePort: 9092
